--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,33 +1,41 @@
-# .github/workflows/deploy.yml
 name: Deploy Angular App to GitHub Pages
 
 on:
   push:
     branches:
-      - main  # Or your default branch
+      - main  # Your default branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
 
+      # Step 4: Build Angular app for production
       - name: Build Angular app
-        run: npm run build -- --prod --base-href /ResumeBuilder7777/
+        run: npm run build -- --configuration=production --base-href /ResumeBuilder7777/
 
+      # Step 5: Create 404.html for routing fallback
+      - name: Create 404 fallback
+        run: cp dist/resume-builder/index.html dist/resume-builder/404.html
+
+      # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # The branch where GitHub Pages serves content
-          folder: dist/resume-builder  # Replace <APP_NAME> with your Angular project name
+          branch: gh-pages                 # Branch for GitHub Pages
+          folder: dist/resume-builder      # Replace with your Angular dist folder
           token: ${{ secrets.GITHUB_TOKEN }}
