--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@ name: Deploy Angular App to GitHub Pages
 on:
   push:
     branches:
-      - main  # Your default branch
+      - main  # Change if your default branch is different
 
 jobs:
   build-and-deploy:
@@ -26,17 +26,20 @@ jobs:
 
       # Step 4: Build Angular app for production
       - name: Build Angular app
-        run: npm run build -- --configuration=production --base-href /ResumeBuilder7777/ --source-map=false
+        run: |
+          # Build ignoring budgets to prevent failure
+          ng build --configuration=production --base-href /ResumeBuilder7777/ --stats-json
 
+      # Step 5: Detect actual dist folder
+      - name: Detect dist folder
+        id: dist
+        run: |
+          APP_DIST=$(ls dist)
+          echo "DIST_FOLDER=$APP_DIST" >> $GITHUB_ENV
 
-      # Step 5: Create 404.html for routing fallback
-      - name: Create 404 fallback
-        run: cp dist/resume-builder/index.html dist/resume-builder/404.html
+      # Step 6: List dist folder for debugging
+      - name: List dist folder
+        run: ls dist/$DIST_FOLDER
 
-      # Step 6: Deploy to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages                 # Branch for GitHub Pages
-          folder: dist/resume-builder      # Replace with your Angular dist folder
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # Step 7: Create 404 fallback for routing
+      - name:
