--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,4 +42,13 @@ jobs:
         run: ls dist/$DIST_FOLDER
 
       # Step 7: Create 404 fallback for routing
-      - name:
+      - name: Create 404 fallback
+        run: cp dist/$DIST_FOLDER/index.html dist/$DIST_FOLDER/404.html
+
+      # Step 8: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: dist/$DIST_FOLDER
+          token: ${{ secrets.GITHUB_TOKEN }}
