--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@ name: Deploy Angular App to GitHub Pages
 on:
   push:
     branches:
-      - main  # Change if your default branch is different
+      - main
 
 jobs:
   build-and-deploy:
@@ -24,22 +24,23 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Step 4: Build Angular app for production using npx
+      # Step 4: Build Angular app
       - name: Build Angular app
         run: npx ng build --configuration=production --base-href /ResumeBuilder7777/ --stats-json
 
-      # Step 5: Detect actual dist folder
+      # Step 5: Detect actual dist folder dynamically
       - name: Detect dist folder
         id: dist
         run: |
-          APP_DIST=$(ls dist)
-          echo "DIST_FOLDER=$APP_DIST" >> $GITHUB_ENV
+          DIST_FOLDER=$(ls dist | head -n 1)
+          echo "Detected dist folder: $DIST_FOLDER"
+          echo "DIST_FOLDER=$DIST_FOLDER" >> $GITHUB_ENV
 
-      # Step 6: List dist folder for debugging
-      - name: List dist folder
-        run: ls dist/$DIST_FOLDER
+      # Step 6: Verify contents of the dist folder
+      - name: List dist folder contents
+        run: ls -l dist/$DIST_FOLDER
 
-      # Step 7: Create 404 fallback for routing
+      # Step 7: Create 404 fallback for Angular routing
       - name: Create 404 fallback
         run: cp dist/$DIST_FOLDER/index.html dist/$DIST_FOLDER/404.html
 
