--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,26 +28,27 @@ jobs:
       - name: Build Angular app
         run: npx ng build --configuration=production --base-href /ResumeBuilder7777/ --stats-json
 
-      # Step 5: Detect dist folder and browser subfolder
+      # Step 5: Detect dist/browser folder dynamically
       - name: Detect dist/browser folder
         id: dist
         run: |
           DIST_FOLDER=$(ls dist | head -n 1)
           DIST_PATH="dist/$DIST_FOLDER/browser"
           echo "DIST_FOLDER_PATH=$DIST_PATH" >> $GITHUB_ENV
+          echo "Detected dist folder: $DIST_PATH"
 
       # Step 6: List contents for debugging
       - name: List dist/browser folder contents
-        run: ls -l $DIST_FOLDER_PATH
+        run: ls -l ${{ env.DIST_FOLDER_PATH }}
 
       # Step 7: Create 404 fallback for Angular routing
       - name: Create 404 fallback
-        run: cp $DIST_FOLDER_PATH/index.html $DIST_FOLDER_PATH/404.html
+        run: cp ${{ env.DIST_FOLDER_PATH }}/index.html ${{ env.DIST_FOLDER_PATH }}/404.html
 
       # Step 8: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: $DIST_FOLDER_PATH
+          folder: ${{ env.DIST_FOLDER_PATH }}
           token: ${{ secrets.GITHUB_TOKEN }}
