--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,11 +45,12 @@ jobs:
       - name: Create 404 fallback
         run: cp ${{ env.DIST_FOLDER_PATH }}/index.html ${{ env.DIST_FOLDER_PATH }}/404.html
 
-      # Step 8: Deploy to GitHub Pages with force (avoids git 128 errors)
+      # Step 8: Deploy to GitHub Pages (force overwrite & orphan branch)
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: ${{ env.DIST_FOLDER_PATH }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          clean: true  # Force overwrite existing gh-pages content
+          clean: true          # Force overwrite existing gh-pages content
+          force-orphan: true   # Avoid git history conflicts on first deployment
